crates/compiler/src/snapshots/compiler__parser__test__slot_dir-5.snap
---
source: crates/compiler/src/parser.rs
expression: dir

---
Dir:
  name: slot@
  argument: ~
  modifiers:
    - "@"
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 13
        line: 1
        column: 14
      end:
        offset: 17
        line: 1
        column: 18
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 12
      line: 1
      column: 13
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 17
      line: 1
      column: 18

