crates/compiler/src/snapshots/compiler__parser__test__slot_dir.snap
---
source: crates/compiler/src/parser.rs
expression: dir

---
Dir:
  name: slot
  argument: ~
  modifiers: []
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 5
        line: 1
        column: 6
      end:
        offset: 9
        line: 1
        column: 10
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 4
      line: 1
      column: 5
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 9
      line: 1
      column: 10

